--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="bookmark" href="favicon.ico" type="image/x-icon"　/>
-<title>Duo, Bin (多滨)</title>
+<title>Duo, Bin (多 滨)</title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -22,7 +22,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Duo, Bin (多滨) </h1>
+<h1>Duo, Bin (多 滨) </h1>
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://xiuzezhou.github.io/"><img src="photos/duo.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
@@ -34,17 +34,18 @@ Hangzhou City, China <br />
 E-mail: <a href="mailto:zhouxiuze@foxmail.com">zhouxiuze@foxmail.com</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I received the B.S. degree from the Zhejiang University of Science and Technology, in 2012, and the M.S. degree from Xiamen University, in 2016. I am currently a research scientist with the AI Research Institute, Hithink RoyalFlush, China. My main research interests include Machine Learning, Deep Learning and Recommender Systems. Also, I do some research about Computer Vision, such as knee osteoarthritis prediction, and Time Series Prediction, such as remaining useful life prediction of Lithium-ion batteries. I focus on using AI to solve practical problems.</p>
+<p>多滨，男，博士（后），教授，硕士生导师，智能网联技术研究创新团队带头人，物联网与智能科学系副主任，IEEE会员，中国通信学会会员、中国计算机学会专业会员、四川省海外高层次留学人才、四川省侨联特聘专家，成都理工大学中青年骨干教师。分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得哲学博士和工学博士学位；2018年至今在电子科技大学通信抗干扰国家级重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。
+长期从事智能科学与技术及应用方面的教学科研工作，近期主要研究方向为6G无人飞行器自主航迹规划、智能超表面赋能的绿色通信与高精度定位、公共安全隐患诊断与风险预警、优化理论与机器学习及其应用等方面。近年来，主持和参与国家自然科学基金项目、国家重点研发计划项目、四川省重点研发计划项目等10余项；在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表投稿SCI/EI检索论文近30篇（含中科院2区以上高水平论文7篇），受理专利4项，获软件著作权5项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。主讲数字通信原理、多传感器信息融合等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
-<li><p>Machine Learning  </p>
+<li><p>智能无人机行业解决方案  </p>
 </li>
-<li><p>Deep Learning</p>
+<li><p>6G赋能全自主无人机集群通信技术</p>
 </li>
-<li><p>Recommender Systems</p>
+<li><p>多源融合物联网终端信息安全技术</p>
 </li>
-<li><p>Computer Vision</p>
+<li><p>优化理论、强化学习、联邦学习</p>
 </li>
 </ul>
 <h3>Current work</h3>
