--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://xiuzezhou.github.io/"><img src="photos/duo.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
-<td align="left"><p>Research Scientist,<br />
-AI Research Institute,<br />
-Hithink RoyalFlush Information Network Co., Ltd. <br />
-No. 18 Tongshun Street, <br />
-Hangzhou City, China <br /> 
-E-mail: <a href="mailto:zhouxiuze@foxmail.com">zhouxiuze@foxmail.com</a></p>
+<td align="left"><p>Ph.D., Professor, PhD Tutor,<br />
+IIoT Intelligent Monitoring and Application Engineering Technology Research Institute of Sichuan Province,<br />
+Chengdu University of Technology <br />
+E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </td></tr></table>
 <h2>About me</h2>
 <p>多滨，男，博士（后），教授，硕士生导师，智能网联技术研究创新团队带头人，物联网与智能科学系副主任，IEEE会员，中国通信学会会员、中国计算机学会专业会员、四川省海外高层次留学人才、四川省侨联特聘专家，成都理工大学中青年骨干教师。分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得哲学博士和工学博士学位；2018年至今在电子科技大学通信抗干扰国家级重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。
