--- a/index.html
+++ b/index.html
@@ -94,7 +94,18 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <p><a href="https://scholar.google.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p>
 <h3>Academic service</h3>
-<p><b>Reviewer</b></p>
+<p><b>Membership</b></p>
+<ul>
+<li><p>IEEE Member</p>
+</li>
+<li><p>IEEE Access</p>
+</li>
+<li><p>ACM Transactions on Knowledge Discovery from Data</p>
+</li>  
+<li><p>Mathematical Problems in Engineering</p>
+</li>
+</ul>
+<p><b>Journal Reviewer</b></p>
 <ul>
 <li><p>IEEE Transactions on Industrial Informatics</p>
 </li>
