--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <p>多滨，男，博士（后），教授，硕士生导师，智能网联技术研究创新团队带头人，物联网与智能科学系副主任，IEEE会员，中国通信学会会员、中国计算机学会专业会员、四川省海外高层次留学人才、四川省侨联特聘专家，成都理工大学中青年骨干教师。分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得哲学博士和工学博士学位；2018年至今在电子科技大学通信抗干扰国家级重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。
 长期从事智能科学与技术及应用方面的教学科研工作，近期主要研究方向为6G无人飞行器自主航迹规划、智能超表面赋能的绿色通信与高精度定位、公共安全隐患诊断与风险预警、优化理论与机器学习及其应用等方面。近年来，主持和参与国家自然科学基金项目、国家重点研发计划项目、四川省重点研发计划项目等10余项；在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表投稿SCI/EI检索论文近30篇（含中科院2区以上高水平论文7篇），受理专利4项，获软件著作权5项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。主讲数字通信原理、多传感器信息融合等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
 <h2>Latest News</h2>
-<p>[2021.12] Paper of Liu Yifan was accepted by IEEE Journal on Selected Areas in Communications( 刘一凡 论文被JSAC(IF=9.144)期刊录用 )</p>
+<p>[2022.2] Paper of Liu Yifan was accepted by IEEE Wireless Communications Letters （硕士研究生刘一凡 论文被IEEE TWC (IF=9.144)期刊录用)</p>
+<p>[2022.1] Paper of Liu Yifan was accepted by IEEE Transactions on Vechicular Techonlogy (硕士研究生刘一凡 论文被IEEE TVT (IF=9.144)期刊录用)</p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
