--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://xiuzezhou.github.io/"><img src="photos/duo.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
-<td align="left"><p>Ph.D., Professor, PhD Tutor,<br />
+<td align="left"><p>Ph.D., Professor, Master Tutor,<br />
 IIoT Intelligent Monitoring and Application Engineering Technology Research Institute of Sichuan Province,<br />
 Chengdu University of Technology <br />
 E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
