--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ Chengdu University of Technology <br />
 E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>多滨，男，博士（后），教授，硕士生导师，智能网联技术研究创新团队带头人，物联网与智能科学系副主任，四川省海外高层次留学人才、四川省侨联特聘专家，成都理工大学中青年骨干教师。
+<p>多滨，男，博士（后），教授，硕士生导师，成都理工大学智能网联技术研究创新团队带头人，物联网与智能科学系副主任，四川省海外高层次留学人才、四川省侨联特聘专家，成都理工大学中青年骨干教师。
 分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰国家级重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。 
 近期主要从事智能科学与技术及应用方面的教学科研工作，主持和参与国家自然科学基金项目、国家重点研发计划项目、四川省重点研发计划项目等10余项；
-在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表投稿SCI/EI检索论文近30篇，受理专利2项，获软件著作权5项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。
-主讲数字通信原理、多传感器信息融合等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
+在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表SCI/EI检索论文30余篇，受理专利2项，获软件著作权5项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。
+主讲最优化理论及应用、数字通信原理等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
 <h2>Latest News</h2>
 <p>[2022.2] Paper of Liu Yifan was accepted by IEEE Wireless Communications Letters （硕士研究生刘一凡 论文被IEEE TWC (IF=9.144)期刊录用)</p>
 <p>[2022.1] Paper of Liu Yifan was accepted by IEEE Transactions on Vechicular Techonlogy (硕士研究生刘一凡 论文被IEEE TVT (IF=9.144)期刊录用)</p>
