--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
-<li><p>智能无人机行业解决方案  </p>
+<li><p>Industry solution to intelligent UAVs ｜ 智能无人机行业解决方案</p>
 </li>
-<li><p>6G赋能全自主无人机集群通信技术</p>
+<li><p>6G-enabled UAV swarm intelligence | 6G赋能全自主无人机集群通信技术</p>
 </li>
-<li><p>多源融合物联网终端信息安全技术</p>
+<li><p>Information security technology of IoT | 多源融合物联网终端信息安全技术</p>
 </li>
-<li><p>优化理论、强化学习、联邦学习</p>
+<li><p>Convex optimizaton, reinforcement learningm federated learning | 优化理论、强化学习、联邦学习</p>
 </li>
 </ul>
 <h3>Under review</h3>
