--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <h2>Latest News</h2>
 <p>[2022.2] Paper of Liu Yifan was accepted by IEEE Wireless Communications Letters （硕士研究生刘一凡 论文被IEEE TWC (IF=9.144)期刊录用)</p>
 <p>[2022.1] Paper of Liu Yifan was accepted by IEEE Transactions on Vechicular Techonlogy (硕士研究生刘一凡 论文被IEEE TVT (IF=9.144)期刊录用)</p>
+<p>[2022.1] Paper of Liu Yifan was accepted by IEEE Transactions on Vechicular Techonlogy (硕士研究生刘一凡 论文被IEEE TVT (IF=9.144)期刊录用)</p>
+<p>[2022.1] Paper of Liu Yifan was accepted by IEEE Transactions on Vechicular Techonlogy (邵明谦,刘一凡,胡豪,李沂莲 大学生网络安全尖锋训练营2021年度精英百强大赛潜力三等奖)</p>
+<p>[2022.1] M.S. student Hu Hao is awarded National Scholarship( 硕士生胡豪获得研究生国家奖学金 )</p>
+<p>[2022.1] M.S. student Li Yilian is awarded second-class academic scholarship (硕士研究生李沂莲获得二等学业奖学金)</p>
+<p>[2022.1] M.S. student Lei Yu is awarded first-class academic scholarship (硕士研究生雷雨获得一等学业奖学金)</p>
+<p>[2022.1] M.S. student Lei Yu is awarded Second-class academic scholarship (硕士研究生雷雨获得国家奖学金)</p>
+<p>[2022.1] M.S. student Li Yilian is awarded Second-class academic scholarship (雷雨获得优秀毕业生称号)</p>
+<p>[2022.1] M.S. student Li Yilian is awarded Second-class academic scholarship (雷雨获得优秀毕业论文)</p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
