--- a/index.html
+++ b/index.html
@@ -38,16 +38,20 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表SCI/EI检索论文30余篇，受理专利2项，获软件著作权5项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。
 主讲最优化理论及应用、数字通信原理等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
 <h2>Latest News</h2>
-<p>[2022.2] Paper of Liu Yifan was accepted by IEEE Wireless Communications Letters （硕士研究生刘一凡 论文被IEEE TWC (IF=9.144)期刊录用)</p>
-<p>[2022.1] Paper of Liu Yifan was accepted by IEEE Transactions on Vechicular Techonlogy (硕士研究生刘一凡 论文被IEEE TVT (IF=9.144)期刊录用)</p>
-<p>[2022.1] Paper of Liu Yifan was accepted by IEEE Transactions on Vechicular Techonlogy (硕士研究生刘一凡 论文被IEEE TVT (IF=9.144)期刊录用)</p>
-<p>[2022.1] Paper of Liu Yifan was accepted by IEEE Transactions on Vechicular Techonlogy (邵明谦,刘一凡,胡豪,李沂莲 大学生网络安全尖锋训练营2021年度精英百强大赛潜力三等奖)</p>
-<p>[2022.1] M.S. student Hu Hao is awarded National Scholarship( 硕士生胡豪获得研究生国家奖学金 )</p>
-<p>[2022.1] M.S. student Li Yilian is awarded second-class academic scholarship (硕士研究生李沂莲获得二等学业奖学金)</p>
-<p>[2022.1] M.S. student Lei Yu is awarded first-class academic scholarship (硕士研究生雷雨获得一等学业奖学金)</p>
-<p>[2022.1] M.S. student Lei Yu is awarded Second-class academic scholarship (硕士研究生雷雨获得国家奖学金)</p>
-<p>[2022.1] M.S. student Li Yilian is awarded Second-class academic scholarship (雷雨获得优秀毕业生称号)</p>
-<p>[2022.1] M.S. student Li Yilian is awarded Second-class academic scholarship (雷雨获得优秀毕业论文)</p>
+<p>[2022.2] Paper of Yifan Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE TWC(IF=9.144)期刊录用</p>
+<p>[2022.1] Paper of Yifan Liu was accepted by IEEE Transactions on Vechicular Techonlogy | 硕士生刘一凡 论文被IEEE TVT(IF=9.144)期刊录用</p>
+<p>[2022.1] Paper of Hao Hu was accepted by China Communications | 硕士生胡豪 论文被China Communications(IF=9.144)期刊录用</p>
+<p>[2022.1] M.S. students Mingqian Shao, Yifan Liu, Hao Hu and Yilian Li are awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦,刘一凡,胡豪,李沂莲 大学生网络安全尖锋训练营2021年度精英百强大赛潜力三等奖</p>
+<p>[2022.1] M.S. student Hao Hu is awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p>
+<p>[2022.1] M.S. student Li Yilian is awarded second-class academic scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p>
+<p>[2022.1] M.S. student Lei Yu is awarded first-class academic scholarship ｜ 硕士生雷雨获得一等学业奖学金</p>
+<p>[2022.1] M.S. student Lei Yu is awarded Second-class academic scholarship ｜ 硕士生雷雨获得国家奖学金</p>
+<p>[2022.1] M.S. student Li Yilian is awarded Second-class academic scholarship ｜ 雷雨获得优秀毕业生称号</p>
+<p>[2022.1] M.S. student Li Yilian is awarded Second-class academic scholarship ｜ 雷雨获得优秀毕业论文 </p>
+<p>[2022.1] Paper of Yilian Li was accepted by Ad Hoc Networks (硕士研究生刘一凡 论文被IEEE TVT (中科院2区，IF=4.111)期刊录用)</p>
+<p>[2022.1] Paper of Hao Hu was accepted by Vehicular Communications (硕士研究生刘一凡 论文被IEEE TVT (中科院2区，IF=6.91)期刊录用)</p>
+<p>[2022.1] Paper of Hao Hu was accepted by IEEE International Conference on Communications, 2021 (硕士研究生刘一凡 论文被IEEE TVT (中科院2区，IF=6.91)期刊录用)</p>
+<p>[2022.1] Paper of Hao Hu was accepted by Vehicular Communications (硕士研究生刘一凡 论文被IEEE TVT (中科院2区，IF=6.91)期刊录用)</p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
