--- a/index.html
+++ b/index.html
@@ -38,20 +38,19 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表SCI/EI检索论文30余篇，受理专利2项，获软件著作权5项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。
 主讲最优化理论及应用、数字通信原理等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
 <h2>Latest News</h2>
-<p>[2022.2] Paper of Yifan Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE TWC(IF=9.144)期刊录用</p>
-<p>[2022.1] Paper of Yifan Liu was accepted by IEEE Transactions on Vechicular Techonlogy | 硕士生刘一凡 论文被IEEE TVT(IF=9.144)期刊录用</p>
-<p>[2022.1] Paper of Hao Hu was accepted by China Communications | 硕士生胡豪 论文被China Communications(IF=9.144)期刊录用</p>
-<p>[2022.1] M.S. students Mingqian Shao, Yifan Liu, Hao Hu and Yilian Li are awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦,刘一凡,胡豪,李沂莲 大学生网络安全尖锋训练营2021年度精英百强大赛潜力三等奖</p>
-<p>[2022.1] M.S. student Hao Hu is awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p>
-<p>[2022.1] M.S. student Li Yilian is awarded second-class academic scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p>
-<p>[2022.1] M.S. student Lei Yu is awarded first-class academic scholarship ｜ 硕士生雷雨获得一等学业奖学金</p>
-<p>[2022.1] M.S. student Lei Yu is awarded Second-class academic scholarship ｜ 硕士生雷雨获得国家奖学金</p>
-<p>[2022.1] M.S. student Li Yilian is awarded Second-class academic scholarship ｜ 雷雨获得优秀毕业生称号</p>
-<p>[2022.1] M.S. student Li Yilian is awarded Second-class academic scholarship ｜ 雷雨获得优秀毕业论文 </p>
-<p>[2022.1] Paper of Yilian Li was accepted by Ad Hoc Networks (硕士研究生刘一凡 论文被IEEE TVT (中科院2区，IF=4.111)期刊录用)</p>
-<p>[2022.1] Paper of Hao Hu was accepted by Vehicular Communications (硕士研究生刘一凡 论文被IEEE TVT (中科院2区，IF=6.91)期刊录用)</p>
-<p>[2022.1] Paper of Hao Hu was accepted by IEEE International Conference on Communications, 2021 (硕士研究生刘一凡 论文被IEEE TVT (中科院2区，IF=6.91)期刊录用)</p>
-<p>[2022.1] Paper of Hao Hu was accepted by Vehicular Communications (硕士研究生刘一凡 论文被IEEE TVT (中科院2区，IF=6.91)期刊录用)</p>
+<p>[2022.02] Paper of Yifan Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL(中科院2区,IF=4.348)期刊录用</p>
+<p>[2022.01] Paper of Yifan Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT(中科院2区Top,IF=5.978)期刊录用</p>
+<p>[2022.01] Paper of Hao Hu was accepted by China Communications | 硕士生胡豪 论文被China Communications(中科院3区,IF=2.688)期刊录用</p>
+<p>[2021.11] M.S. students Mingqian Shao, Yifan Liu, Hao Hu and Yilian Li are awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦,刘一凡,胡豪,李沂莲 大学生网络安全尖锋训练营2021年度精英百强大赛潜力三等奖</p>
+<p>[2021.11] M.S. student Hao Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p>
+<p>[2021.11] M.S. student Yilian Li was awarded Second-class Academic Scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p>
+<p>[2021.11] M.S. student Lei Yu was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p>
+<p>[2021.11] M.S. student Lei Yu was awarded National scholarship ｜ 硕士生雷雨获得国家励志奖学金</p>
+<p>[2021.11] Yu Lei, Outstanding Undergraduate, CDUT ｜ 雷雨，获优秀毕业生</p>
+<p>[2021.11] Yu Lei, Outstanding Graduation Thesis, CDUT ｜ 雷雨获得优秀毕业论文 </p>
+<p>[2021.10] Paper of Yilian Li was accepted by Ad Hoc Networks (硕士生李沂莲 论文被AD HOC NETW (中科院2区，IF=4.111)期刊录用)</p>
+<p>[2021.09] Paper of Hao Hu was accepted by Vehicular Communications (硕士生胡豪 论文被VEH COMMUN (中科院2区，IF=6.91)期刊录用)</p>
+<p>[2021.08] Paper of Hao Hu was accepted by IEEE International Conference on Communications, 2021 (硕士生胡豪凡 论文被IEEE ICC2021会议录用)</p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
@@ -61,7 +60,7 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </li>
 <li><p>Information security technology of IoT | 多源融合物联网终端信息安全技术</p>
 </li>
-<li><p>Convex optimizaton, reinforcement learningm federated learning | 优化理论、强化学习、联邦学习</p>
+<li><p>Convex optimizaton, reinforcement learning, federated learning | 优化理论、强化学习、联邦学习</p>
 </li>
 </ul>
 <h3>Under review</h3>
