--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </ul>
 <h3>Under review</h3>
 <ol>
-<li><p>M. Chen, and <b>X. Zhou</b>*, "CoCNN: Co-occurrence CNN for Recommendation".</p>
+<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network".</p>
 </li>
-<li><p>D. Chen, S. Lu, and <b>X. Zhou</b>*, "A Deep Learning Model for Remaining Useful Life Prediction of Lithium-Ion Batteries".</p>
+<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Joint Beamforming and Trajectory Design for Multiple IOSs-aided UAV Communications".</p>
 </li>
-<li><p>M. Chen, and <b>X. Zhou</b>*, "Autoencoders for Drug-Target Interaction Prediction".</p>
 </ol>
 <h3>Recent publications </h3>
 <ol>
