--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </ol>
 <h3>Recent publications </h3>
 <ol>
-<li><p>M. Chen, Yunhao Li, <b>X. Zhou</b>*, "CoNet: Co-occurrence Neural Networks for Recommendation", <i>Future Generation Computer Systems</i>, Nov. 2021, 124, pp. 308-314. (IF = 7.187) [<a href="pub/conet.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/conet">code</a>]</p>
+<li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, Dec. 2021, 32, pp. 100387. (IF = 7.187)</p>
 </li>
-<li><p>M. Chen, <b>X. Zhou</b>*, "DeepRank: Learning to Rank with Neural Networks for Recommendation", <i>Knowledge-Based Systems</i>, Dec. 2020, 209, pp. 106478. (IF = 8.038) [<a href="pub/DeepRank.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/deeprank">code</a>]</p>
+<li><p><b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channe", <i>Ad Hoc Networks</i>, Oct. 2021, 121, pp. 102592. (IF = 8.038)</p>
 </li>
 </li>
 <li><p>X. Wu, W. Zeng, F. Lin*, and <b>X. Zhou</b>, "NeuRank: Learning to Ranking with Neural Networks for Drug-Target Interaction Prediction", <i>BMC Bioinformatics</i>, Nov. 2021, 22, pp. 567. (IF = 3.024) [<a href="pub/neurank.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/conet">code</a>]</p>
