--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <ol>
 <li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, Dec. 2021, 32, pp. 100387. (IF = 7.187)</p>
 </li>
-<li><p><b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channe", <i>Ad Hoc Networks</i>, Oct. 2021, 121, pp. 102592. (IF = 8.038)</p>
+<li><p><b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channel", <i>Ad Hoc Networks</i>, Oct. 2021, 121, pp. 102592. (IF = 8.038)</p>
 </li>
 </li>
-<li><p>X. Wu, W. Zeng, F. Lin*, and <b>X. Zhou</b>, "NeuRank: Learning to Ranking with Neural Networks for Drug-Target Interaction Prediction", <i>BMC Bioinformatics</i>, Nov. 2021, 22, pp. 567. (IF = 3.024) [<a href="pub/neurank.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/conet">code</a>]</p>
+<li><p><b>B. Duo</b>, J. Luo, Y. Li, H. Hu and Z. Wang*, "Joint trajectory and power optimization for securing UAV communications against active eavesdropping", <i>China Communications</i>, Jan. 2021, 18, 1, pp. 1673-5447. (IF = 3.024)</p>
 </li>
-<li><p><b>X. Zhou</b>* and S. Wu, "Rating LDA Model for Collaborative Filtering", <i>Knowledge-Based Systems</i>, Oct. 2016, 110, pp. 135-143. (IF = 8.038) [<a href="pub/RLDA.pdf">pdf</a>]</p>
+<li><p><b>B. Duo</b>, H. Hu, Y. Li and X. Yuan*, "Joint trajectory and power optimization in probabilistic LoS channel for UAV-Enabled cooperative jamming", <i>ICC 2021 - IEEE International Conference on Communication</i>, 2021, pp. 1-6. </p>
 </li>
-<li><p>K. Li, <b>X. Zhou</b>, F. Lin*, W. Zeng, B. Wang, and G. Alterovitz, "Sparse Online Collaborative Filtering with Dynamic Regularization", <i>Information Sciences</i>, Dec. 2019, 505, pp. 535-548. (IF = 6.795) [<a href="pub/SOCF.pdf">pdf</a>]</p>
+<li><p>S. Li, <b>B. Duo</b>, M. D. Renzo, M. Tao and X. Yuan, "Robust secure UAV Communications with the aid of reconfigurable intelligent surfaces", <i>IEEE Transactions on Wireless Communications</i>, Dec. 2021, 20, 10, pp. 6402-6417. (中科院1区Top，IF = 7.016)</p>
 </li>
-<li><p><b>X. Zhou</b>, W. Shu, F. Lin*, and B. Wang, "Confidence-Weighted Bias Model for Online Collaborative Filtering", <i>Applied Soft Computing</i>, Sep. 2018, 70, pp. 1042-1053. (IF = 6.725)</p>
+<li><p>S. Li, <b>B. Duo</b>, X. Yuan, Y. Liang and M. Di Renzo, "Reconfigurable intelligent surface assisted UAV communication: Joint trajectory design and passive beamforming", <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 5, pp. 716-720, May 2020. (IF = 6.725)</p>
 </li>
 <li><p>K. Li, <b>X. Zhou</b>, F. Lin*, W. Zeng, and G. Alterovitz, "Deep Probabilistic Matrix Factorization Framework for Online Collaborative Filtering", <i>IEEE Access</i>, Mar. 2019, 7, pp. 56117-56128. (IF = 3.367)</p>
 </li>
