--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Joint Beamforming and Trajectory Design for Multiple IOSs-aided UAV Communications".</p>
 </li>
 </ol>
-<h3>Recent publications </h3>
+<h3>Recent selected publications </h3>
 <ol>
 <li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, Dec. 2021, 32, pp. 100387. (IF = 7.187)</p>
 </li>
@@ -85,30 +85,22 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </li>
 <li><p>S. Li, <b>B. Duo</b>, X. Yuan, Y. Liang and M. Di Renzo, "Reconfigurable intelligent surface assisted UAV communication: Joint trajectory design and passive beamforming", <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 5, pp. 716-720, May 2020. (IF = 6.725)</p>
 </li>
-<li><p>K. Li, <b>X. Zhou</b>, F. Lin*, W. Zeng, and G. Alterovitz, "Deep Probabilistic Matrix Factorization Framework for Online Collaborative Filtering", <i>IEEE Access</i>, Mar. 2019, 7, pp. 56117-56128. (IF = 3.367)</p>
+<li><p><b>B. Duo</b>, Q. Wu, X. Yuan* and R. Zhang, "Anti-jamming 3D trajectory design for UAV-enabled wireless sensor networks under probabilistic LoS channel", <i>IEEE Transactions on Vehicular Technologys</i>, vol. 69, no. 12, pp. 16288-16293, Dec. 2020. (IF = 3.367)</p>
 </li>
-<li><p>F. Lin, <b>X. Zhou</b>, and W. Zeng*, "Sparse Online Learning for Collaborative Filtering", <i>International Journal of Computers Communications & Control</i>, Apr. 2016, 11 (2), pp. 248-258. (IF = 2.093)</p>
+<li><p><b>B. Duo</b>, Q. Wu*, X. Yuan and R. Zhang, "Energy efficiency maximization for full-duplex UAV secrecy communication", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4590-4595, April 2020. (IF = 2.093)</p>
 </li>
-<li><p>S. Lu, H. Chen, <b>X. Zhou</b>, B. Wang, H. Wang*, and Q. Hong, "Graph-Based Collaborative Filtering with MLP", <i>Mathematical Problems in Engineering</i>, Dec. 2018, 2018, pp. 1-10. (IF = 1.305)</p>
+<li><p>H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial Cooperative Jamming for Cellular-Enabled UAV Secure Communication Network: Joint Trajectory and Power Control Design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (IF = 1.305)</p>
 </li>
-<li><p><b>X. Zhou</b>, F. Lin*, L. Yang, J. Nie, Q. Tan, W. Zeng, and N. Zhang, "Load Balancing Prediction Method of Cloud Storage based on Analytic Hierarchy Process and Hybrid Hierarchical Genetic Algorithm", <i>SpringerPlus</i>, Nov. 2016, 5 (1), pp. 1989-2012. (IF = 1.780)</p>
-</li>
-<li><p><b>X. Zhou</b>*, and S. Wu, "The Biterm Author Topic in the Sentences Model for E-Mail Analysis", <i>IEICE Transactions on Information and Systems</i>, Aug. 2017, E100.D (8), pp. 1852-1859. (IF = 0.449)</p>
+<li><p>S. Gao, Y. Ma, and <b>B. Duo</b>, "Safeguarding multi-UAVs relaying communications via joint trajectory design and power contro", <i>2020 International Conference on Wireless Communications and Signal Processing (WCSP)</i>, 2020, pp. 1182-1187.</p>
 </li>
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
-<p><a href="https://scholar.google.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p>
+<p><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p>
 <p><b>Patents</b></p>
 <ul>
-<li><p>IEEE Member</p>
+<li><p>1</p>
 </li>
-<li><p>CIC Member</p>
-</li>
-<li><p>CCF Member</p>
-</li>
-<li><p>ACM Transactions on Knowledge Discovery from Data</p>
-</li>  
-<li><p>Mathematical Problems in Engineering</p>
+<li><p>2</p>
 </li>
 </ul>
 <h3>Academic service</h3>
@@ -116,12 +108,10 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <ul>
 <li><p>IEEE Member</p>
 </li>
-<li><p>IEEE Access</p>
+<li><p>CIC Member</p>
 </li>
-<li><p>ACM Transactions on Knowledge Discovery from Data</p>
+<li><p>CCF Member</p>
 </li>  
-<li><p>Mathematical Problems in Engineering</p>
-</li>
 </ul>
 <p><b>Journal Reviewer</b></p>
 <ul>
@@ -134,8 +124,8 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <li><p>Mathematical Problems in Engineering</p>
 </li>
 </ul>
-<p><a href="https://publons.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
-<h2>Projects</h2>
+<p><a href="https://publons1.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
+<h2>Recent Selected Projects</h2>
 <p>Campus Recommender System, 03.2021-Present</p>
 <ul>
 <li><p>Built user profiles based on the data crawled from websites</p>
