--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
 <a href="https://xiuzezhou.github.io/"><img src="photos/duo.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p>Ph.D., Professor, Master Tutor,<br />
 IIoT Intelligent Monitoring and Application Engineering Technology Research Institute of Sichuan Province,<br />
-Chengdu University of Technology <br />
+Chengdu University of Technology, China <br />
 E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>多滨，男，博士（后），教授，硕士生导师，成都理工大学智能网联技术研究创新团队带头人，物联网与智能科学系副主任，四川省海外高层次留学人才、四川省侨联特聘专家，成都理工大学中青年骨干教师。
+<p>多滨，男，博士（后），教授，硕士生导师，成都理工大学智能网联技术研究创新团队带头人，中青年骨干教师，物联网与智能科学系副主任，四川省海外高层次留学人才、四川省侨联特聘专家。
 分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰国家级重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。 
 近期主要从事智能科学与技术及应用方面的教学科研工作，主持和参与国家自然科学基金项目、国家重点研发计划项目、四川省重点研发计划项目等10余项；
 在IEEE TWC、IEEE TVT和IEEE ICC等国际权威期刊和会议上发表SCI/EI检索论文30余篇，受理专利2项，获软件著作权5项；担任IEEE旗下JSAC、TWC、TCOM、TVT、WCL、CL等国际权威期刊的审稿人。
 主讲最优化理论及应用、数字通信原理等课程，于2017年获得成都理工大学第十届青年教师教学竞赛一等奖。</p>
-<h2>Latest News</h2>
-<p>[2022.02] Paper of Yifan Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL(中科院2区,IF=4.348)期刊录用</p>
-<p>[2022.01] Paper of Yifan Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT(中科院2区Top,IF=5.978)期刊录用</p>
-<p>[2022.01] Paper of Hao Hu was accepted by China Communications | 硕士生胡豪 论文被China Communications(中科院3区,IF=2.688)期刊录用</p>
-<p>[2021.11] M.S. students Mingqian Shao, Yifan Liu, Hao Hu and Yilian Li are awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦,刘一凡,胡豪,李沂莲 大学生网络安全尖锋训练营2021年度精英百强大赛潜力三等奖</p>
-<p>[2021.11] M.S. student Hao Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p>
-<p>[2021.11] M.S. student Yilian Li was awarded Second-class Academic Scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p>
-<p>[2021.11] M.S. student Lei Yu was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p>
-<p>[2021.11] M.S. student Lei Yu was awarded National scholarship ｜ 硕士生雷雨获得国家励志奖学金</p>
-<p>[2021.11] Yu Lei, Outstanding Undergraduate, CDUT ｜ 雷雨，获优秀毕业生</p>
-<p>[2021.11] Yu Lei, Outstanding Graduation Thesis, CDUT ｜ 雷雨获得优秀毕业论文 </p>
-<p>[2021.10] Paper of Yilian Li was accepted by Ad Hoc Networks (硕士生李沂莲 论文被AD HOC NETW (中科院2区，IF=4.111)期刊录用)</p>
-<p>[2021.09] Paper of Hao Hu was accepted by Vehicular Communications (硕士生胡豪 论文被VEH COMMUN (中科院2区，IF=6.91)期刊录用)</p>
-<p>[2021.08] Paper of Hao Hu was accepted by IEEE International Conference on Communications, 2021 (硕士生胡豪凡 论文被IEEE ICC2021会议录用)</p>
+<h2>Latest news</h2>
+<p>[2022.02] Paper of Y. Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
+<p>[2022.01] Paper of Y. Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
+<p>[2022.01] Paper of H. Hu was accepted by China Communications | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=2.688）期刊录用</p>
+<p>[2021.12] M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 大学生网络安全尖锋训练营2021年度精英百强大赛潜力三等奖</p>
+<p>[2021.11] M.S. student H. Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p>
+<p>[2021.11] M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p>
+<p>[2021.11] M.S. student Y. Lei was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p>
+<p>[2021.11] M.S. student Y. Lei was awarded National Scholarship ｜ 硕士生雷雨获得国家励志奖学金</p>
+<p>[2021.10] Paper of Y. Li was accepted by Ad Hoc Networks ｜ 硕士生李沂莲 论文被AD HOC NETW（中科院2区, IF=4.111）期刊录用</p>
+<p>[2021.09] Paper of H. Hu was accepted by Vehicular Communications ｜ 硕士生胡豪 论文被VEH COMMUN（中科院2区, IF=6.91）期刊录用</p>
+<p>[2021.08] Paper of H. Hu was accepted by IEEE International Conference on Communications, 2021 ｜ 硕士生胡豪凡 论文被IEEE ICC2021会议录用</p>
+<p>[2021.11] Y. Lei, Outstanding Undergraduate, CDUT ｜ 雷雨获成都理工大学优秀毕业生</p>
+<p>[2021.11] Y. Lei, Outstanding Graduation Thesis, CDUT ｜ 雷雨获成都理工大学优秀毕业论文 </p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
