--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="https://scholar.google.com/citations?user=xTzN-qoAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a></div>
-<div class="menu-item"><a href="https://www.researchgate.net/profile/Xiuze-Zhou">ResearchGate</a></div>
-<div class="menu-item"><a href="https://github.com/XiuzeZhou">GitHub</a></div>
-<div class="menu-item"><a href="http://snailwish.com/">个人博客</a></div>
+<div class="menu-item"><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a></div>
+<div class="menu-item"><a href="https://www.researchgate1.net/profile/Xiuze-Zhou">ResearchGate</a></div>
+<div class="menu-item"><a href="https://github.com/duobin">GitHub</a></div>
+<div class="menu-item"><a href="http://snailwish1.com/">个人博客</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -41,16 +41,16 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <p>[2022.02] Paper of Y. Liu was accepted by IEEE Wireless Communications Letters | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=4.348）期刊录用</p>
 <p>[2022.01] Paper of Y. Liu was accepted by IEEE Transactions on Vehicular Technology | 硕士生刘一凡 论文被IEEE TVT（中科院2区Top, IF=5.978）期刊录用</p>
 <p>[2022.01] Paper of H. Hu was accepted by China Communications | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=2.688）期刊录用</p>
-<p>[2021.12] M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 大学生网络安全尖锋训练营2021年度精英百强大赛潜力三等奖</p>
+<p>[2021.12] M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p>
 <p>[2021.11] M.S. student H. Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p>
 <p>[2021.11] M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p>
 <p>[2021.11] M.S. student Y. Lei was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p>
 <p>[2021.11] M.S. student Y. Lei was awarded National Scholarship ｜ 硕士生雷雨获得国家励志奖学金</p>
 <p>[2021.10] Paper of Y. Li was accepted by Ad Hoc Networks ｜ 硕士生李沂莲 论文被AD HOC NETW（中科院2区, IF=4.111）期刊录用</p>
 <p>[2021.09] Paper of H. Hu was accepted by Vehicular Communications ｜ 硕士生胡豪 论文被VEH COMMUN（中科院2区, IF=6.91）期刊录用</p>
-<p>[2021.08] Paper of H. Hu was accepted by IEEE International Conference on Communications, 2021 ｜ 硕士生胡豪凡 论文被IEEE ICC2021会议录用</p>
-<p>[2021.11] Y. Lei, Outstanding Undergraduate, CDUT ｜ 雷雨获成都理工大学优秀毕业生</p>
-<p>[2021.11] Y. Lei, Outstanding Graduation Thesis, CDUT ｜ 雷雨获成都理工大学优秀毕业论文 </p>
+<p>[2021.08] Paper of H. Hu was accepted by IEEE International Conference on Communications, 2021 ｜ 硕士生胡豪 论文被IEEE ICC2021会议录用</p>
+<p>[2021.07] Y. Lei, Outstanding Undergraduate, CDUT ｜ 雷雨获成都理工大学优秀毕业生</p>
+<p>[2021.07] Y. Lei, Outstanding Graduation Thesis, CDUT ｜ 雷雨获成都理工大学优秀毕业论文 </p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
