--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </ul>
 <h3>Under review</h3>
 <ol>
-<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network".</p>
+<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", Submitted to IEEE Transactions on Green Communications and Networking, 2021.</p>
 </li>
-<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Joint Beamforming and Trajectory Design for Multiple IOSs-aided UAV Communications".</p>
+<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Joint Beamforming and Trajectory Design for Multiple IOSs-aided UAV Communications", Submitted to IEEE Systems Journal, 2022.</p>
 </li>
 </ol>
 <h3>Recent selected publications </h3>
