--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <li><p><b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channel", <i>Ad Hoc Networks</i>, vol. 121, pp. 102592, Oct. 2021,. (中科院2区, IF=4.11)</p>
 </li>
 </li>
-<li><p><b>B. Duo</b>, J. Luo, Y. Li, H. Hu and Z. Wang*, "Joint trajectory and power optimization for securing UAV communications against active eavesdropping", <i>China Communications</i>, Jan. 2021, 18, 1, pp. 1673-5447. (IF = 3.024)</p>
+<li><p><b>B. Duo</b>, J. Luo, Y. Li, H. Hu and Z. Wang*, "Joint trajectory and power optimization for securing UAV communications against active eavesdropping", <i>China Communications</i>, vol. 18, no. 1, pp. 1673-5447, Jan. 2021. (中科院3区, IF=2.688)</p>
 </li>
 <li><p><b>B. Duo</b>, H. Hu, Y. Li and X. Yuan*, "Joint trajectory and power optimization in probabilistic LoS channel for UAV-Enabled cooperative jamming", <i>ICC 2021 - IEEE International Conference on Communication</i>, 2021, pp. 1-6. </p>
 </li>
-<li><p>S. Li, <b>B. Duo</b>, M. D. Renzo, M. Tao and X. Yuan*, "Robust secure UAV Communications with the aid of reconfigurable intelligent surfaces", <i>IEEE Transactions on Wireless Communications</i>, Dec. 2021, 20, 10, pp. 6402-6417. (中科院1区Top，IF = 7.016)</p>
+<li><p>S. Li, <b>B. Duo</b>, M. D. Renzo, M. Tao and X. Yuan*, "Robust secure UAV Communications with the aid of reconfigurable intelligent surfaces", <i>IEEE Transactions on Wireless Communications</i>, vol. 20, no. 10, pp. 6402-6417, Dec. 2021. (中科院1区Top，IF = 7.016)</p>
 </li>
-<li><p>S. Li, <b>B. Duo</b>, X. Yuan*, Y. Liang and M. Di Renzo, "Reconfigurable intelligent surface assisted UAV communication: Joint trajectory design and passive beamforming", <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 5, pp. 716-720, May 2020. (IF = 6.725)</p>
+<li><p>S. Li, <b>B. Duo</b>, X. Yuan*, Y. Liang and M. Di Renzo, "Reconfigurable intelligent surface assisted UAV communication: Joint trajectory design and passive beamforming", <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 5, pp. 716-720, May 2020. (中科院2区, IF=4.348, ESI高被引)</p>
 </li>
-<li><p><b>B. Duo</b>, Q. Wu, X. Yuan* and R. Zhang, "Anti-jamming 3D trajectory design for UAV-enabled wireless sensor networks under probabilistic LoS channel", <i>IEEE Transactions on Vehicular Technologys</i>, vol. 69, no. 12, pp. 16288-16293, Dec. 2020. (IF = 3.367)</p>
+<li><p><b>B. Duo</b>, Q. Wu, X. Yuan* and R. Zhang, "Anti-jamming 3D trajectory design for UAV-enabled wireless sensor networks under probabilistic LoS channel", <i>IEEE Transactions on Vehicular Technologys</i>, vol. 69, no. 12, pp. 16288-16293, Dec. 2020. (中科院2区Top, IF=5.978)</p>
 </li>
-<li><p><b>B. Duo</b>, Q. Wu*, X. Yuan and R. Zhang, "Energy efficiency maximization for full-duplex UAV secrecy communication", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4590-4595, April 2020. (IF = 2.093)</p>
+<li><p><b>B. Duo</b>, Q. Wu*, X. Yuan and R. Zhang, "Energy efficiency maximization for full-duplex UAV secrecy communication", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4590-4595, April 2020. (中科院2区Top, IF=5.978)</p>
 </li>
-<li><p>H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial Cooperative Jamming for Cellular-Enabled UAV Secure Communication Network: Joint Trajectory and Power Control Design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (IF = 1.305)</p>
+<li><p>H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial Cooperative Jamming for Cellular-Enabled UAV Secure Communication Network: Joint Trajectory and Power Control Design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (中科院2区Top, IF=3.756)</p>
 </li>
 <li><p>S. Gao, Y. Ma, and <b>B. Duo</b>*, "Safeguarding multi-UAVs relaying communications via joint trajectory design and power contro", <i>2020 International Conference on Wireless Communications and Signal Processing (WCSP)</i>, 2020, pp. 1182-1187.</p>
 </li>
