--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </li>
 <li><p>S. Li, <b>B. Duo</b>, X. Yuan*, Y. Liang and M. Di Renzo, "Reconfigurable intelligent surface assisted UAV communication: Joint trajectory design and passive beamforming", <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 5, pp. 716-720, May 2020. (中科院2区, IF=4.348, ESI高被引)</p>
 </li>
-<li><p><b>B. Duo</b>, Q. Wu, X. Yuan* and R. Zhang, "Anti-jamming 3D trajectory design for UAV-enabled wireless sensor networks under probabilistic LoS channel", <i>IEEE Transactions on Vehicular Technologys</i>, vol. 69, no. 12, pp. 16288-16293, Dec. 2020. (中科院2区Top, IF=5.978)</p>
+<li><p><b>B. Duo</b>, Q. Wu, X. Yuan* and R. Zhang, "Anti-jamming 3D trajectory design for UAV-enabled wireless sensor networks under probabilistic LoS channel", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 12, pp. 16288-16293, Dec. 2020. (中科院2区Top, IF=5.978)</p>
 </li>
 <li><p><b>B. Duo</b>, Q. Wu*, X. Yuan and R. Zhang, "Energy efficiency maximization for full-duplex UAV secrecy communication", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4590-4595, April 2020. (中科院2区Top, IF=5.978)</p>
 </li>
-<li><p>H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial Cooperative Jamming for Cellular-Enabled UAV Secure Communication Network: Joint Trajectory and Power Control Design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (中科院2区Top, IF=3.756)</p>
+<li><p>H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial cooperative jamming for cellular-enabled UAV secure communication network: Joint trajectory and power control design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (中科院2区Top, IF=3.756)</p>
 </li>
 <li><p>S. Gao, Y. Ma, and <b>B. Duo</b>*, "Safeguarding multi-UAVs relaying communications via joint trajectory design and power contro", <i>2020 International Conference on Wireless Communications and Signal Processing (WCSP)</i>, 2020, pp. 1182-1187.</p>
 </li>
