--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="menu-item"><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a></div>
 <div class="menu-item"><a href="https://www.researchgate1.net/profile/Xiuze-Zhou">ResearchGate</a></div>
 <div class="menu-item"><a href="https://github.com/duobin">GitHub</a></div>
-<div class="menu-item"><a href="http://snailwish1.com/">个人博客</a></div>
+<div class="menu-item"><a href="https://www.cdut.edu.cn/index.htm/">成都理工大学</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -98,9 +98,9 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <p><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p>
 <p><b>Patents</b></p>
 <ul>
-<li><p>1</p>
+<li><p>UAV</p>
 </li>
-<li><p>2</p>
+<li><p>RIS</p>
 </li>
 </ul>
 <h3>Academic service</h3>
@@ -115,13 +115,17 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </ul>
 <p><b>Journal Reviewer</b></p>
 <ul>
-<li><p>IEEE Transactions on Industrial Informatics</p>
+<li><p>IEEE Journal on Selected Areas in Communications</p>
 </li>
-<li><p>IEEE Access</p>
+<li><p>IEEE Transactions on Wireless Communications</p>
 </li>
-<li><p>ACM Transactions on Knowledge Discovery from Data</p>
+<li><p>IEEE Transactions on Vehicular Technology</p>
 </li>  
-<li><p>Mathematical Problems in Engineering</p>
+<li><p>IEEE Wireless Communications Letters</p>
+</li>  
+<li><p>IEEE Communications Letters</p>
+</li>  
+<li><p>Vehicular Communications</p>
 </li>
 </ul>
 <p><a href="https://publons1.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
