--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <p><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p>
-<p><b>Patents</b></p>
+<h3>Patents<h3>
 <ul>
 <li><p>UAV</p>
 </li>
@@ -129,70 +129,16 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </li>
 </ul>
 <p><a href="https://publons1.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
-<h2>Recent Selected Projects</h2>
+<h2>Recent selected projects</h2>
 <p>Campus Recommender System, 03.2021-Present</p>
 <ul>
-<li><p>Built user profiles based on the data crawled from websites</p>
-</li>
-<li><p>Recommended information, such as courses from MOOC, and publications from Arxiv, to students</p>
-</li>
-<li><p>Recommended information from within and outside the university based on faculty research, courses taught, and interests</p>
-</li>
 </ul>
 <p>Online Education Explainable Recommender System, NSFC, 06.2018-12.2018</p>
-<ul>
-<li><p>Summarized over 500,000 exercises and classified their knowledge points from all subjects</p>
-</li>
-<li><p>Applied matrix factorization for online learning and recommendation of exercises based on interaction of users</p>
-</li>
-<li><p>Added latent features learned by neural networks from exercises to online matrix factorization for better performance</p>
-</li>
-</ul>
 <p>Development of Memorizing Words APP, 06.2017-02.2018</p>
-<ul>
-<li><p>Extracted the records of memorizing words of over 100,000 users from a database</p>
-</li>
-<li><p>Counted the pairs of error words with the co-occurrence rate to obtain a co-occurrence table</p>
-</li>
-<li><p>Provided words, along with situation pictures, to enhance memory and showed co-occurrence words from a table</p>
-</li>
-</ul>
 <p>Analysis of Film Review from <i>Douban.com</i>, 09.2016-03.2017</p>
-<ul>
-<li><p>Crawled film reviews and ratings from websites</p>
-</li>
-<li><p>Segmented words and cleaned and processed texts</p>
-</li>
-<li><p>Added features learned by neural networks to matrix factorization to predict movie's ratings</p>
-</li>
-</ul>
 <p>Topics Analysis on <i>Weibo</i>, 05.2015-02.2016</p>
-<ul>
-<li><p>Crawled Weibo messages from websites</p>
-</li>
-<li><p>Segmented words, cleaned and processed texts, converted the data for storage and analytics</p>
-</li>
-<li><p>Built a topic model LDA by C<tt></tt> and applied it to obtain topics of Weibo for discovering hot events</p>
-</li>
-</ul>
 <p>Email-Based User Relationship Analysis, 10.2014-02.2015</p>
-<ul>
-<li><p>Cleaned and processed the contents of over 100,000 emails to obtain message bodies</p>
-</li>
-<li><p>Built an author-topic model with biterm pattern by C<tt></tt></p>
-</li>
-<li><p>Used model to identify relationships between users based on communication contents</p>
-</li>
-</ul>
 <p>Smart Home System, 03.2011-02.2012</p>
-<ul>
-<li><p>Designed and built a hardware system including PCB, sensors, and single-chip microcomputer</p>
-</li>
-<li><p>Developed a program of single-chip microcomputer with language C to realize the function of the system</p>
-</li>
-<li><p>Developed a human-computer interaction software with C# for signal reception, processing, and transmission</p>
-</li>
-</ul>
 <h2>Awards</h2>
 <ul>
 <li><p>First-Class Scholarship, Zhejiang University of Science and Technology, 10.2011</p>
