--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="menu-item"><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a></div>
 <div class="menu-item"><a href="https://www.researchgate1.net/profile/Xiuze-Zhou">ResearchGate</a></div>
 <div class="menu-item"><a href="https://github.com/duobin">GitHub</a></div>
-<div class="menu-item"><a href="https://www.cdut.edu.cn/index.htm/">成都理工大学</a></div>
+<div class="menu-item"><a href="https://www.cdut.edu.cn">CDUT</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
