--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <p><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p>
 <h3>Patents<h3>
-<ul>
+<ol>
 <li><p>UAV</p>
 </li>
 <li><p>RIS</p>
 </li>
-</ul>
+</ol>
 <h3>Academic service</h3>
 <p><b>Membership</b></p>
 <ul>
@@ -133,12 +133,18 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 <p>Campus Recommender System, 03.2021-Present</p>
 <ul>
 </ul>
-<p>Online Education Explainable Recommender System, NSFC, 06.2018-12.2018</p>
-<p>Development of Memorizing Words APP, 06.2017-02.2018</p>
-<p>Analysis of Film Review from <i>Douban.com</i>, 09.2016-03.2017</p>
-<p>Topics Analysis on <i>Weibo</i>, 05.2015-02.2016</p>
-<p>Email-Based User Relationship Analysis, 10.2014-02.2015</p>
-<p>Smart Home System, 03.2011-02.2012</p>
+<li><p>Online Education Explainable Recommender System, NSFC, 06.2018-12.2018</p>
+<li>
+<li><p>Development of Memorizing Words APP, 06.2017-02.2018</p>
+<li>
+<li><p>Analysis of Film Review from <i>Douban.com</i>, 09.2016-03.2017</p>
+<li>
+<li><p>Topics Analysis on <i>Weibo</i>, 05.2015-02.2016</p>
+<li>
+<li><p>Email-Based User Relationship Analysis, 10.2014-02.2015</p>
+<li>
+<li><p>Smart Home System, 03.2011-02.2012</p>
+<li>
 <h2>Awards</h2>
 <ul>
 <li><p>First-Class Scholarship, Zhejiang University of Science and Technology, 10.2011</p>
