--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </li>
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
-<p><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p>
-<h3>Patents<h3>
+<p><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p> 
+<h3>Patents</h3>
 <ol>
 <li><p>UAV</p>
 </li>
@@ -130,21 +130,22 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 </ul>
 <p><a href="https://publons1.com/researcher/3034188/xiuze-zhou/">More details in Publons</a></p>
 <h2>Recent selected projects</h2>
-<p>Campus Recommender System, 03.2021-Present</p>
 <ul>
+<li><p>First-Class Scholarship, Zhejiang University of Science and Technology, 10.2011</p>
+</li>
+<li><p>National Encouragement Scholarship, 12.2011 & 12.2010</p>
+</li>
+<li><p>The 2nd Prize in the National Advanced Mathematics Contest for Undergraduates (Zhejiang), 12.2011</p>
+</li>
+<li><p>The 2nd Prize in the Zhejiang Advanced Mathematics Contest for Undergraduates, 04.2011</p>
+</li>
+<li><p>The 3rd Prize in the Zhejiang Advanced Mathematics Contest for Undergraduates, 10.2009 & 04.2010</p>
+</li>
+<li><p>The 3rd Prize in the Zhejiang Physics Contest for Undergraduates, 12.2009 & 12.2010</p>
+</li>
+<li><p>The 1st Prize in the Electronics Design Contests, Zhejiang University of Science and Technology, 12.2010</p>
+</li>
 </ul>
-<li><p>Online Education Explainable Recommender System, NSFC, 06.2018-12.2018</p>
-<li>
-<li><p>Development of Memorizing Words APP, 06.2017-02.2018</p>
-<li>
-<li><p>Analysis of Film Review from <i>Douban.com</i>, 09.2016-03.2017</p>
-<li>
-<li><p>Topics Analysis on <i>Weibo</i>, 05.2015-02.2016</p>
-<li>
-<li><p>Email-Based User Relationship Analysis, 10.2014-02.2015</p>
-<li>
-<li><p>Smart Home System, 03.2011-02.2012</p>
-<li>
 <h2>Awards</h2>
 <ul>
 <li><p>First-Class Scholarship, Zhejiang University of Science and Technology, 10.2011</p>
