--- a/index.html
+++ b/index.html
@@ -30,6 +30,49 @@
 IIoT Intelligent Monitoring and Application Engineering Technology Research Institute of Sichuan Province,<br />
 Chengdu University of Technology, China <br />
 E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
+
+        <table class="imgtable">
+                <tr>
+                    <td>
+                        <a href="./"><img src="./Files/gz_photo_square.jpg" alt="" height="175px" /></a>&nbsp;
+                    </td>
+                    <td align="left">
+                        <p>
+                            <a href="./">
+                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;&nbsp;
+                                <font size="4">Dr. Zhen Gao (</font>
+                                <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
+                                <font size="4">)</font>
+                            </a><br />
+                            <i> Ph.D., Assistant Professor, PhD Tutor </i>
+                            <br /><br />
+                            <a href="http://arims.bit.edu.cn/" target="_blank">Advanced Research Institute of
+                                Multidisciplinary Science (ARIMS)</a><br />
+                            <a href="https://www.bit.edu.cn/" target="_blank">Beijing Institute of Technology</a><br />
+                            <br /> Location: Central Building Room 629, No. 5, South Street, Zhongguancun, Haidian
+                            District, Beijing, China
+                            <br />
+                            <class="staffshortcut">
+                                <A HREF="#Latest">Latest</A> |
+                                <A HREF="#Interest">Research Interest</A> |
+                                <A HREF="#Publications">Publications</A> |
+                                <A HREF="#Patents">Patents</A> |
+                                <A HREF="#Services">Services</A> |
+                                <A HREF="#Awards">Awards</A> |
+                                <A HREF="#Statistics">Statistics</A> |
+                                <br />
+                                <br /> Email: <a href=mailto:gaozhen16@bit.edu.cn>gaozhen16@bit.edu.cn</a> (prior);
+                                &nbsp;&nbsp;&nbsp;&nbsp;
+                                <a href=mailto:gaozhen010375@foxmail.com>gaozhen010375@foxmail.com</a>
+                                <br />
+                                [<a href="https://scholar.google.com/citations?user=4ylyExkAAAAJ" target="_blank">Google
+                                    Scholar</a>]
+                                [<a href="https://ieeexplore.ieee.org/author/37073332000" target="_blank">IEEE</a>]
+                                [<a href="https://github.com/gaozhen16" target="_blank">GitHub</a>]
+                    </td>
+                </tr>
+            </table>
+  
 </td></tr></table>
 <h2>About me</h2>
 <p>多滨，男，博士（后），教授，硕士生导师，成都理工大学智能网联技术研究创新团队带头人，中青年骨干教师，物联网与智能科学系副主任，四川省海外高层次留学人才、四川省侨联特聘专家。
