--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h1>Duo, Bin (多 滨) </h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://xiuzezhou.github.io/"><img src="photos/duo.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<a href="https://xiuzezhou.github.io/"><img src="photos/duo.jpeg" alt="alt text" width="131px" height="180px" /></a>&nbsp;</td>
 <td align="left"><p>Ph.D., Professor, Master Tutor,<br />
 IIoT Intelligent Monitoring and Application Engineering Technology Research Institute of Sichuan Province,<br />
 Chengdu University of Technology, China <br />
@@ -40,21 +40,21 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
                         <p>
                             <a href="./">
                                 <i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;&nbsp;
-                                <font size="4">Dr. Zhen Gao (</font>
-                                <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
+                                <font size="4">Dr. Bin Duo (</font>
+                                <font size="4" ; font style="font-family:Microsoft YaHei">多 滨</font>
                                 <font size="4">)</font>
                             </a><br />
-                            <i> Ph.D., Assistant Professor, PhD Tutor </i>
+                            <i> Ph.D., Professor, Master Tutor </i>
                             <br /><br />
-                            <a href="http://arims.bit.edu.cn/" target="_blank">Advanced Research Institute of
-                                Multidisciplinary Science (ARIMS)</a><br />
-                            <a href="https://www.bit.edu.cn/" target="_blank">Beijing Institute of Technology</a><br />
+                            <a href="http://arims.bit.edu.cn/" target="_blank">IIoT Intelligent Monitoring and 
+                              Application Engineering Technology Research Institute of Sichuan Province</a><br />
+                            <a href="https://www.bit.edu.cn/" target="_blank">Chengdu University of Technology, China</a><br />
                             <br /> Location: Central Building Room 629, No. 5, South Street, Zhongguancun, Haidian
                             District, Beijing, China
                             <br />
                             <class="staffshortcut">
-                                <A HREF="#Latest">Latest</A> |
-                                <A HREF="#Interest">Research Interest</A> |
+                                <A HREF="#About me">About me</A> |
+                                <A HREF="#Latest news">Latest</A> |
                                 <A HREF="#Publications">Publications</A> |
                                 <A HREF="#Patents">Patents</A> |
                                 <A HREF="#Services">Services</A> |
@@ -64,11 +64,6 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
                                 <br /> Email: <a href=mailto:gaozhen16@bit.edu.cn>gaozhen16@bit.edu.cn</a> (prior);
                                 &nbsp;&nbsp;&nbsp;&nbsp;
                                 <a href=mailto:gaozhen010375@foxmail.com>gaozhen010375@foxmail.com</a>
-                                <br />
-                                [<a href="https://scholar.google.com/citations?user=4ylyExkAAAAJ" target="_blank">Google
-                                    Scholar</a>]
-                                [<a href="https://ieeexplore.ieee.org/author/37073332000" target="_blank">IEEE</a>]
-                                [<a href="https://github.com/gaozhen16" target="_blank">GitHub</a>]
                     </td>
                 </tr>
             </table>
