--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://xiuzezhou.github.io/"><img src="photos/duo.jpeg" alt="alt text" width="131px" height="180px" /></a>&nbsp;</td>
-<td align="left"><p>Ph.D., Professor, Master Tutor,<br />
-IIoT Intelligent Monitoring and Application Engineering Technology Research Institute of Sichuan Province,<br />
-Chengdu University of Technology, China <br />
-E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
 
         <table class="imgtable">
                 <tr>
@@ -61,9 +57,8 @@ E-mail: <a href="mailto:duo_bin@163.com">duo_bin@163.com</a></p>
                                 <A HREF="#Awards">Awards</A> |
                                 <A HREF="#Statistics">Statistics</A> |
                                 <br />
-                                <br /> Email: <a href=mailto:gaozhen16@bit.edu.cn>gaozhen16@bit.edu.cn</a> (prior);
-                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                <a href=mailto:gaozhen010375@foxmail.com>gaozhen010375@foxmail.com</a>
+                                <br /> Email: <a href=mailto:duo_bin@163.com>duo_bin@163.com</a>
+                         
                     </td>
                 </tr>
             </table>
