--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
                             <br />
                             <class="staffshortcut">
                                 <A HREF="#About me">About me</A> |
-                                <A HREF="#Latest news">Latest</A> |
-                                <A HREF="#Publications">Publications</A> |
+                                <A HREF="#Latest news">Latest news</A> |
+                                <A HREF="#Research">Interests</A> |
+                                <A HREF="#Recent selected publications">Publications</A> |
                                 <A HREF="#Patents">Patents</A> |
-                                <A HREF="#Services">Services</A> |
+                                <A HREF="#Academic service">Services</A> |
+                                <A HREF="#Recent selected projects">Projects</A> |
                                 <A HREF="#Awards">Awards</A> |
                                 <A HREF="#Statistics">Statistics</A> |
                                 <br />
