--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <table class="imgtable"><tr><td>
 <a href="https://xiuzezhou.github.io/"><img src="photos/duo.jpeg" alt="alt text" width="131px" height="180px" /></a>&nbsp;</td>
 
-        <table class="imgtable">
+        <td align="left"><table class="imgtable">
                 <tr>
                     <td>
                         <a href="./"><img src="./Files/gz_photo_square.jpg" alt="" height="175px" /></a>&nbsp;
