--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <p>
                             <a href="./">
                                 <i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;&nbsp;
+                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>;
                                 <font size="4">Dr. Bin Duo (</font>
                                 <font size="4" ; font style="font-family:Microsoft YaHei">多 滨</font>
                                 <font size="4">)</font>
