--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                     <td align="left">
                         <p>
                             <a href="./">
-                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;&nbsp;
-                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>;
+                                <i class="fa fa-graduation-cap" aria-hidden="false"></i>&nbsp;&nbsp;
                                 <font size="4">Dr. Bin Duo (</font>
                                 <font size="4" ; font style="font-family:Microsoft YaHei">多 滨</font>
                                 <font size="4">)</font>
@@ -61,6 +60,7 @@
                                 <A HREF="#Statistics">Statistics</A> |
                                 <br />
                                 <br /> Email: <a href=mailto:duo_bin@163.com>duo_bin@163.com</a>
+                              <br />
                          
                     </td>
                 </tr>
